Fixes the z-index in different places so that things show on top of each other correctly Refactored main app so that we are not rendering the header twice Hides the horizontal scroll for the main app

--- a/css/portal-dashboard/custom-select.less
+++ b/css/portal-dashboard/custom-select.less
@@ -152,13 +152,13 @@
     border-radius: 0 0 4px 4px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
     opacity: 0;
-    z-index: 2;
     transition-property: opacity;
     transition-duration: .25s;
     pointer-events: none;
 
     &.show {
       opacity: 1;
+      z-index: 3;
       pointer-events: auto;
       cursor: pointer;
     }
