--- a/css/portal-dashboard/response-details/popup-student-response-list.less
+++ b/css/portal-dashboard/response-details/popup-student-response-list.less
@@ -2,7 +2,6 @@
 
 .responseTable {
   margin-top: 3px;
-  min-width: 1100px;
   overflow-y: auto;
   font-weight: normal;
 
