--- a/css/portal-dashboard/response-details/response-details.less
+++ b/css/portal-dashboard/response-details/response-details.less
@@ -2,7 +2,6 @@
 
 .tableHeader {
   display: flex;
-  min-width: 1100px;
 
   .responsePanel {
     flex: 1;
@@ -34,6 +33,4 @@
 
 .feedbackRowsContainer {
   flex: 1;
-  min-width: 1100px;
-  overflow: auto;
 }
